# rustassistant

./: .dockerignore  .env.example  .env.rustassistant  .gitignore  ACTION_PLAN.md  ALL_FIXES_COMPLETE.md  CLEANUP_SUMMARY.md  Cargo.toml  INDEX.md  PHASE2_COMPLETE.md  QUICKFIX.md  README.md  SESSION_CACHE_INTEGRATION.md  SESSION_COMPLETE.md  WHATS_NEXT.md  docker-compose.advanced.yml  docker-compose.prod.yml  docker-compose.yml  fix-permissions.sh  run.sh  todo.md  verify_fixes.sh
.github/staging/: ci-cd.yml
.github/workflows/: ci-cd.yml  llm-audit.yml
.rustassistant/: .gitignore  README.md  cache.json  context.md  gameplan.json  manifest.json  scaffold_plan.json  scan.json  scan_fresh.json  symbols.json  todos.json  tree.txt
.rustassistant/backups/: src_api_handlers.rs.bak
.rustassistant/results/: batch-001.json  batch-006.json
.sqlx/: query-00084aa840b2fcb16a08455e04e311232824219d86f76a30db04c87b21e89f48.json  query-1073bd9ae3fea786468774268967c5a6db90c4ed8beec6f7db28295e95b27b93.json  query-2403190562e6c6c8544a57e208f6fecf45700ab7b0064eada2e60a1614e0f1e3.json  query-4f20f77f8ee23f8e81c7f9eaaf430642d06b57e482d7ae064bff0afbeb09e8b3.json  query-50767ddddd85a4a351ae4e526545e0b1f4bcb42e703a65b2084bbcd2b5fcd44d.json  query-64baa1bcb4ed5496bf699218ed2df18387aed81b1f297808f1e26ca58c065e28.json  query-a5b3dd06d3f27bd8c5824263ee449dbc010d98ed2ea824568b56c605f8b82ea3.json
deployment/: README.md  docker-compose.yml.backup  github-sync-daemon.service
docker/: Dockerfile  Dockerfile.cli  Dockerfile.ollama  Dockerfile.web  fix-wsl2-nvidia.sh  wsl2-entrypoint.sh
docs/: ADVANCED_FEATURES_COMPLETE.md  ADVANCED_FEATURES_GUIDE.md  API_TESTING_RESULTS.md  BATCH_OPERATIONS.md  CACHE_DEPLOYMENT.md  CACHE_INTEGRATION.md  CACHE_PHASES_0_3_AND_1_QUICK_REF.md  CICD_REVIEW.md  CLI_CHEATSHEET.md  CODE_REVIEW.md  CONTRIBUTING.md  COST_OPTIMIZATION_RESULTS.md  DEPLOYMENT_CHECKLIST.md  DOCKER_QUICK_START.md  DOCKER_SETUP_COMPLETE.md  FEATURES_SUMMARY.md  GETTING_STARTED.md  GROK_4.1_MIGRATION.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  MULTI_FACTOR_CACHE_KEYS_COMPLETE.md  NEXT_PRIORITIES.md  PHASE1_OVERVIEW.md  PHASE2_FEATURE1_SUMMARY.md  PHASE2_FEATURE2_SUMMARY.md  PHASE2_RAG_RESULTS.md  PHASE_0_3_TOKEN_TRACKING_COMPLETE.md  PHASE_1_1_MIGRATION_COMPLETE.md  PHASE_1_SQLITE_CACHE_COMPLETE.md  PROGRESS_UPDATE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_DECISION_GUIDE.md  QUICK_START.md  QUICK_START_IMPLEMENTATION.md  RAG_API.md  REFACTORING_SUMMARY.md  REMAINING_ERRORS.md  REPO_CACHE_DESIGN.md  (+27 more)
docs/archive/: ADVANCED_FEATURES.md  DEPLOYMENT_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5.md
docs/guides/: ADVANCED_FEATURES_GUIDE.md  QUICK_START.md
examples/: github_background_sync.rs  github_migration.rs  github_test.rs  rag_server.rs  test_chunking.rs  test_commits.rs  test_embeddings.rs  test_search.rs
migrations/: 003_scan_progress.sql  004_require_git_url.sql  005_notes_enhancements.sql  006_documents.sql  015_registered_repos.sql
scripts/: estimate_tokens.py  fix_core_names.py  fix_query_macros.py  fix_remaining_sqlite.py  generate-secrets.sh  install.sh  migrate_to_centralized.sh  pg_placeholders.py  pg_pool_swap.sh  setup-production-server.sh  test_api.sh  test_cache_versioning.sh  test_example.rs
scripts/deployment/: deploy-migrations.sh
scripts/testing/: test-deployment.sh  test-phase1-documents.sh
src/: auto_scanner.rs  cache_layer.rs  cache_migrate.rs  chunking.rs  code_review.rs  context_builder.rs  cost_tracker.rs  db.rs  embeddings.rs  grok_client.rs  indexing.rs  lib.rs  metrics.rs  model_router.rs  multi_tenant.rs  ollama_client.rs  query_analytics.rs  query_router.rs  query_templates.rs  refactor_assistant.rs  repo_analysis.rs  repo_cache.rs  repo_cache_sql.rs  repo_manager.rs  repo_sync.rs  response_cache.rs  search.rs  server.rs  sync_scheduler.rs  telemetry.rs  test_generator.rs  tests_runner.rs  vector_index.rs  web_api.rs  web_ui.rs  web_ui_api_keys.rs  web_ui_audit.rs  web_ui_chat.rs  web_ui_db_explorer.rs  web_ui_extensions.rs  (+4 more)
src/api/: admin.rs  auth.rs  handlers.rs  jobs.rs  mod.rs  proxy.rs  proxy_client.rs  rate_limit.rs  repos.rs  types.rs
src/audit/: cache.rs  endpoint.rs  mod.rs  report.rs  runner.rs  types.rs
src/backup/: mod.rs
src/cli/: github_commands.rs  queue_commands.rs  research_backup_commands.rs  task_commands.rs
src/db/: chunks.rs  config.rs  core.rs  documents.rs  mod.rs  queue.rs  scan_events.rs
src/github/: background_sync.rs  client.rs  mod.rs  search.rs  sync.rs  webhook.rs
src/llm/: compat.rs
src/queue/: processor.rs
src/research/: mod.rs  worker.rs
src/scanner/: github.rs
src/task/: mod.rs  models.rs
src/todo/: mod.rs  planner.rs  scaffolder.rs  scanner.rs  sync.rs  todo_file.rs  worker.rs
static/: index.html  rustassistant-ui.html
tests/: api_integration_tests.rs
todo/: 003_scan_docs_ideas.sql  COMMIT_MESSAGE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCKER_MIGRATION_GUIDE.md  Dockerfile  INTEGRATION_GUIDE.md  OVERALL_PROGRESS.md  PHASE1_TESTING_REPORT.md  PHASE2_PROGRESS.md  PRIORITY2_SUMMARY.md  PRIORITY3_COMMIT.md  PRIORITY3_COMPLETE.md  PRIORITY3_IMPLEMENTATION.md  PRIORITY3_SUMMARY.md  PRIORITY3_TESTING.md  PRIORITY4_COMPLETE.md  PRIORITY4_IMPLEMENTATION.md  PRIORITY4_SUMMARY.md  PRIORITY5_IMPLEMENTATION.md  PRIORITY5_PROGRESS.md  QUICK_REFERENCE.md  README.md  README_DEPLOYMENT_SECTION.md  REFACTOR_CLI_COMPLETE.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  WIRING_GUIDE.md  docker-compose.prod.yml  docker-compose.rustassistant.yml  docker-compose.yml  documents.rs  implementation-plan.md  lib_additions.rs  merge.md  model_router.rs  repo_manager.rs  repo_sync.rs  repos_api.rs  scan_events.rs  (+5 more)
(+14 files in other folders)
